--- a/frontend/src/app/pages/components/tecnico/tecnico-delete/tecnico-delete.component.html
+++ b/frontend/src/app/pages/components/tecnico/tecnico-delete/tecnico-delete.component.html
@@ -16,7 +16,7 @@
       
     </mat-form-field>
 
-    <button class="mat-elevation-z8 container" mat-raised-button color="primary">
+    <button (click)="delete()" class="mat-elevation-z8 container" mat-raised-button color="primary">
         Remover
     </button>
 
