--- a/frontend/src/app/pages/components/cliente/cliente-read/cliente-read.component.html
+++ b/frontend/src/app/pages/components/cliente/cliente-read/cliente-read.component.html
@@ -1,58 +1,58 @@
 <div class="create">
-    <h1>Clientes</h1>
-    <button class="mat-elevation-z8 container" mat-raised-button color="primary">Novo Cliente</button>
-  </div>
-  
-  <div class="mat-elevation-z8 container">
-      <table mat-table [dataSource]="dataSource">
-    
-        <!-- Position Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> Id </th>
-          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        </ng-container>
-    
-        <!-- Name Column -->
-        <ng-container matColumnDef="nome">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-        </ng-container>
-    
-        <!-- Weight Column -->
-        <ng-container matColumnDef="cpf">
-          <th mat-header-cell *matHeaderCellDef> CPF </th>
-          <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
-        </ng-container>
-    
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="telefone">
-          <th mat-header-cell *matHeaderCellDef> Telefone </th>
-          <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
-        </ng-container>
-  
-        <ng-container matColumnDef="operacoes">
-          <th mat-header-cell *matHeaderCellDef> Operações </th>
-          <td mat-cell *matCellDef="let element">
-            <a routerLink="/">
-              <button mat-mini-fab color="primary" aria-label="Example icon button with a plus one icon">
-                <mat-icon>edit</mat-icon>
-              </button>  
-            </a>
-  
-            <a class="delete" routerLink="/">
-              <button mat-mini-fab color="primary" aria-label="Example icon button with a plus one icon">
-                <mat-icon>delete</mat-icon>
-              </button>  
-            </a>
-  
-          </td>
-  
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    
-      <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
-    </div>
-    
+  <h1>Clientes</h1>
+  <button (click)="navigateToCreate()" class="mat-elevation-z8 container" mat-raised-button color="primary">Novo
+    Cliente</button>
+</div>
+
+<div class="mat-elevation-z8 container">
+  <table mat-table [dataSource]="dataSource">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="nome">
+      <th mat-header-cell *matHeaderCellDef> Nome </th>
+      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="cpf">
+      <th mat-header-cell *matHeaderCellDef> CPF </th>
+      <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="telefone">
+      <th mat-header-cell *matHeaderCellDef> Telefone </th>
+      <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="operacoes">
+      <th mat-header-cell *matHeaderCellDef> Operações </th>
+      <td mat-cell *matCellDef="let element">
+        <a routerLink="update/{{ element.id }}">
+          <button mat-mini-fab color="primary" aria-label="Example icon button with a plus one icon">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </a>
+
+        <a class="delete" routerLink="/">
+          <button mat-mini-fab color="primary" aria-label="Example icon button with a plus one icon">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </a>
+
+      </td>
+
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
+</div>
