--- a/frontend/src/app/pages/components/cliente/cliente-read/cliente-read.component.html
+++ b/frontend/src/app/pages/components/cliente/cliente-read/cliente-read.component.html
@@ -40,7 +40,7 @@
           </button>
         </a>
 
-        <a class="delete" routerLink="/">
+        <a class="delete" routerLink="delete/{{ element.id }}">
           <button mat-mini-fab color="primary" aria-label="Example icon button with a plus one icon">
             <mat-icon>delete</mat-icon>
           </button>
