--- a/frontend/src/app/pages/components/os/os-read/os-read.component.html
+++ b/frontend/src/app/pages/components/os/os-read/os-read.component.html
@@ -1,6 +1,6 @@
 <div class="create">
     <h1>Ordens de Serviço</h1>
-    <button class="mat-elevation-z8 container" mat-raised-button color="primary">
+    <button (click)="navigateToCreate()" class="mat-elevation-z8 container" mat-raised-button color="primary">
         Nova Ordem de Serviço
     </button>
 </div>
@@ -32,7 +32,9 @@
 
         <ng-container matColumnDef="prioridade">
             <th mat-header-cell *matHeaderCellDef> Prioridade </th>
-            <td mat-cell *matCellDef="let element"> {{element.prioridade}} </td>
+            <td mat-cell *matCellDef="let element" class="{{ prioridade(element.prioridade) }}"> 
+                {{element.prioridade}}
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="status">
@@ -62,5 +64,5 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
 </div>
